@@ -14,6 +14,10 @@ next version <kevin@koconnor.net>, Holger Schurig, Vasily Khoruzhick
 
   * Add detection for implementor Qualcomm
 
+  * Add generic support for QSD8xxx
+
+  * Add support for the HTC Leo
+
 20080928 0.5.2 <kevin@koconnor.net>, <ipaqlinux@oliford.co.uk>, <pmiscml@gmail.com>
 
   * Add support for "Centrality" arm cpus.
